fix(scroll): fix double scroll issue

--- a/src/styles/custom-base-styles.scss
+++ b/src/styles/custom-base-styles.scss
@@ -1,9 +1,7 @@
 // Custom Base Styles
 
 html,
-body,
-#app {
-  height: 100%;
+body {
   margin: 0;
   padding: 0;
   font-family: theme('fonts.body');
